style builder page, increase wrapper width

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -102,7 +102,7 @@
 
       <div id="interior_options">
 
-        <% int_materials = {"Black Chromexcel" => '#333', "Rust Chromexcel" => '#e64d00', "Natural Chromexcel" => '#663500', "Natural Vermont" => '#ffdd99', "Grey Chevre" => '#8c8c8c', "Navy Chevre" => '#000066', "Cerulean Chevre" => '#0080ff', "Maroon Chevre" => '#800000', "Crimson Chevre" => '#ff0000', "Lemon Chevre" => '#ffff00'} %>
+        <% int_materials = {"Black Chromexcel" => '#333', "Natural Chromexcel" => '#996633', "Rust Chromexcel" => '#802b00', "Natural Vermont" => '#ffdd99', "Grey Chevre" => '#8c8c8c', "Navy Chevre" => '#000066', "Cerulean Chevre" => '#0080ff', "Maroon Chevre" => '#800000', "Crimson Chevre" => '#ff0000', "Lemon Chevre" => '#cca300'} %>
         <div id="interior_materials">
           <%= label_tag :interior, "Interior Leather—" %><span id="interior_materials_label"></span><br>
             <% int_materials.each do |material, color| %>
