--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,7 +77,7 @@ h1 {
 
 #wrapper {
 
-	max-width: 940px;
+	max-width: 1000px;
 	margin: 0 auto;
 	padding: 0 15% 0 15%;
 
@@ -185,7 +185,7 @@ h1 {
 #view_container .product_image{
 
 	position: absolute;
-
+	max-width: 100%;
 }
 
 .required_field {
@@ -568,7 +568,7 @@ h1 {
 
 #options_panel {
 
-	width: 40%;
+	width: 31%;
 	margin: 1em 1% 0 0;
 	display: inline;
 	float: left;
@@ -578,8 +578,8 @@ h1 {
 #product_view_panel {
 
 	position: relative;
-	width: 58%;
-	margin: 1em 0 0 1%;
+	width: 66%;
+	margin: 1em 0 0 2%;
 	display: inline;
 	float: left;
 
