--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -70,7 +70,7 @@
         <% if @category == "ID Wallet" %>
           <div id="pockets_interior">
             <%= label_tag :pockets_interior, "Match Pocket to Exterior" %><br>
-            <%= check_box_tag :pockets_interior, 1, true %>
+            <%= check_box_tag :pockets_interior %>
           </div> 
         <% end %>
         
@@ -114,7 +114,7 @@
         <% if @category != "ID Wallet" %>
           <div id="pockets_interior">
             <%= label_tag :pockets_interior, "Match Pockets to Interior" %><br>
-            <%= check_box_tag :pockets_interior, 1, true %>
+            <%= check_box_tag :pockets_interior %>
           </div> 
         <% end %>
 
@@ -147,7 +147,7 @@
 
         <div id="pockets_same">
           <%= label_tag :pockets_same, "Style Pockets Individually" %><br>
-          <%= check_box_tag :pockets_same, 1, true %>
+          <%= check_box_tag :pockets_same %>
         </div>
 
         <div id="pocket_materials">
