--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div id="page_title">
     <div class="field">
-      <h1><%= "Custom " + @category %></h1>
+      <text class="custom_title"><%= "Custom " + @category %></text>
     </div>
     
     <div class="field">
