add natural shell cordovan as CP exterior option

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -85,7 +85,7 @@
       <div id="exterior_options">
 
         <div id="exterior_materials">
-          <% ext_materials = { 'Black Chromexcel Horsehide' =>  '#000000', 'Oxblood Chromexcel Horsehide' => '#660000', 'Natural Chromexcel Horsehide' => '#663500', 'Marine Chromexcel' => '#006080', 'Brown Chromexcel' => '#4d2800', 'Natural Chromexcel' => '#663500', "Grey Chevre" => '#8c8c8c', "Navy Chevre" => '#000066', "Cerulean Chevre" => '#0080ff', 'Leaf Chevre' => '#3d8c3f', "Maroon Chevre" => '#800000', "Crimson Chevre" => '#d8002e', "Lemon Chevre" => '#cca300', 'Natural Veg Tan' => '#ffdd99',  'Black Shell Cordovan' => '#000000', 'Navy Shell Cordovan' => '#000066', 'Rust Shell Cordovan' => '#b37700' , 'Black Shark' => '#333', 'Brown Shark' => '#4d2800', 'Natural Lizard' => '#c9c2ab'  } %>
+          <% ext_materials = { 'Black Chromexcel Horsehide' =>  '#000000', 'Oxblood Chromexcel Horsehide' => '#660000', 'Natural Chromexcel Horsehide' => '#663500', 'Marine Chromexcel' => '#006080', 'Brown Chromexcel' => '#4d2800', 'Natural Chromexcel' => '#663500', "Grey Chevre" => '#8c8c8c', "Navy Chevre" => '#000066', "Cerulean Chevre" => '#0080ff', 'Leaf Chevre' => '#3d8c3f', "Maroon Chevre" => '#800000', "Crimson Chevre" => '#d8002e', "Lemon Chevre" => '#cca300', 'Natural Veg Tan' => '#ffdd99',  'Black Shell Cordovan' => '#000000', 'Navy Shell Cordovan' => '#000066', 'Rust Shell Cordovan' => '#b37700' , 'Natural Shell Cordovan' => '#e2d3ac', 'Black Shark' => '#333', 'Brown Shark' => '#4d2800', 'Natural Lizard' => '#c9c2ab'  } %>
           <%= label_tag :exterior, "Exterior Leather—" %><br><span id="exterior_materials_label"></span><br>
           <% ext_materials.each do |material, color| %>
             <%= radio_button_tag "exterior_materials", material %>
@@ -108,7 +108,7 @@
         </div>
 
         <div id="stitching">
-          <% stitch_options = { 'Black Linen' => '#000000', 'White Linen' => '#f2f2f2', 'Natural Linen' => '#fff7e6', 'Brown Linen' => '#660000', 'Blue Linen' => '#0047b3', 'Red Linen' => '#b30000', 'Green Linen' => '#006600', 'Yellow Linen' => '#ffd633' } %>
+          <% stitch_options = { 'Black Linen' => '#000000', 'White Linen' => '#f2f2f2', 'Brown Linen' => '#660000', 'Natural Linen' => '#fff7e6', 'Blue Linen' => '#0047b3', 'Red Linen' => '#b30000', 'Green Linen' => '#006600', 'Yellow Linen' => '#ffd633' } %>
           <%= label_tag :stitching, "Stitching—" %><span id="stitching_label"></span><br>
           <% stitch_options.each do |material, color| %>
             <%= radio_button_tag "stitching", material %>
