adding viewport solution to CP layout and tweaking css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -932,4 +932,18 @@ p#empty {
   	font-size: 1.25em;
 
   }
+
+	.label_swatch {
+		width: 50px;
+    	height: 25px;
+    	border-top: 10px solid white;
+    	display: inline-block;
+	}
+	
+	.label_swatch {
+		width: 50px;
+		height: 25px;
+		border-top: 10px solid white;
+		display: inline-block;
+	}
 }
