--- a/app/views/layouts/custom_products.html.erb
+++ b/app/views/layouts/custom_products.html.erb
@@ -7,6 +7,7 @@
 	<%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'public' %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
 
