--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
 <nav id="nav">
 	<div id="logo">
 		<%= link_to root_path do %>
-			<%= image_tag '/assets/site/logotype_small.png', :alt => "Decade", :id => "logo" %>
+			<%= image_tag '/assets/site/decade_logotype.gif', :alt => "Decade", :id => "logo" %>
 		<% end %>
 	</div>
 	<div id="pages_nav">
