fix product template mobile view

--- a/app/views/layouts/product.html.erb
+++ b/app/views/layouts/product.html.erb
@@ -10,6 +10,7 @@
   <%= javascript_include_tag 'product' %>
   <%= javascript_include_tag 'owl.carousel.min' %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
 
