fix User ID head in orders index

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,7 +8,7 @@
 		<table id="order_table">
 			<tr>
 				<% if current_user.try(:admin?) %>
-					<th>User ID</th>
+					<th><p>User ID</p></th>
 				<% end %>
 				<th><p>Order Number</p></th>
 				<th><p>Description</p></th>
