create form for guest checkout info

--- a/app/views/cart/checkout_verify.html.erb
+++ b/app/views/cart/checkout_verify.html.erb
@@ -32,5 +32,14 @@
 
 <div>
   <h2>Checkout as Guest</h2>
+  <%= form_tag do %>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.text_field %>
+    </div>
 
+    <div class="actions">
+      <%= f.submit "Submit" %>
+    </div>
+  <% end %>
 </div>
