draft shipping info form

--- a/app/views/cart/checkout_verify.html.erb
+++ b/app/views/cart/checkout_verify.html.erb
@@ -31,5 +31,5 @@
 <h2> Or </h2>
 
 <div>
-  <h2>  <%= link_to "Checkout as Guest", checkout_info_path(:level => "Guest") %></h2>
+  <h2>  <%= link_to "Checkout as Guest", checkout_info_path(:level => "Verified") %></h2>
 </div>
