--- a/app/views/cart/checkout_info.html.erb
+++ b/app/views/cart/checkout_info.html.erb
@@ -8,6 +8,11 @@
 		<%= text_field_tag 'name', nil, class: "required_address" %>
 	</div>
 	<div class="address_field">
+		<%= label_tag 'email' %>
+		<span class="error_notice"></span>
+		<%= text_field_tag 'required_email' %>
+	</div>	
+	<div class="address_field">
 		<%= label_tag 'Address 1' %>
 		<span class="error_notice"></span>
 		<%= text_field_tag 'address 1', nil, class: "required_address" %>
@@ -37,10 +42,6 @@
 		<span class="error_notice"></span>
 		<%= select_tag 'country', options_for_select(countries), class: "required_address" %>
 	</div>
-	<div class="address_field">
-		<%= label_tag 'email' %>
-		<span class="error_notice"></span>
-		<%= text_field_tag 'required_email' %>
-	</div>
-	<%= submit_tag 'Review & Confirm' %>
+	<%= submit_tag 'Review & Confirm', id: "submit" %>
+	<%= hidden_field_tag 'params' %>
 <% end %>
